--- a/WeatherTest/Base.lproj/Main.storyboard
+++ b/WeatherTest/Base.lproj/Main.storyboard
@@ -22,29 +22,32 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yuj-9a-mA5">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="220"/>
                                 <subviews>
+                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="7YU-5W-ZQt">
+                                        <rect key="frame" x="177" y="100" width="20" height="20"/>
+                                    </activityIndicatorView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="RxC-SF-SuT">
                                         <rect key="frame" x="8" y="28" width="359" height="184"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GnV-27-gMn">
-                                                <rect key="frame" x="0.0" y="0.0" width="359" height="45.5"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="359" height="46"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2bf-n2-lMq">
-                                                <rect key="frame" x="0.0" y="45.5" width="359" height="45.5"/>
+                                                <rect key="frame" x="0.0" y="46" width="359" height="46"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ls1-n7-c3t">
-                                                <rect key="frame" x="0.0" y="91" width="359" height="47.5"/>
+                                                <rect key="frame" x="0.0" y="92" width="359" height="46"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="70"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H4r-Pb-ZAK">
-                                                <rect key="frame" x="0.0" y="138.5" width="359" height="45.5"/>
+                                                <rect key="frame" x="0.0" y="138" width="359" height="46"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -67,6 +70,8 @@
                                 <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstItem="6NC-KT-Eeq" firstAttribute="leading" secondItem="Yuj-9a-mA5" secondAttribute="leading" id="0t0-xd-2q8"/>
+                                    <constraint firstItem="7YU-5W-ZQt" firstAttribute="centerY" secondItem="Yuj-9a-mA5" secondAttribute="centerY" id="2C5-YA-OGt"/>
+                                    <constraint firstItem="7YU-5W-ZQt" firstAttribute="centerX" secondItem="Yuj-9a-mA5" secondAttribute="centerX" id="KBc-pP-Pvt"/>
                                     <constraint firstAttribute="bottomMargin" secondItem="RxC-SF-SuT" secondAttribute="bottom" id="Q5b-hb-DT2"/>
                                     <constraint firstItem="RxC-SF-SuT" firstAttribute="leading" secondItem="Yuj-9a-mA5" secondAttribute="leadingMargin" id="Q8Z-cL-2Ji"/>
                                     <constraint firstAttribute="trailing" secondItem="6NC-KT-Eeq" secondAttribute="trailing" id="UV5-b9-81t"/>
@@ -128,6 +133,7 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="7YU-5W-ZQt" id="Ldy-mY-mGO"/>
                         <outlet property="cityLabel" destination="GnV-27-gMn" id="Zql-nm-gCh"/>
                         <outlet property="descriptionCityLabel" destination="H4r-Pb-ZAK" id="i9j-9E-Rd5"/>
                         <outlet property="heightConstraint" destination="GxN-ec-pKx" id="BdU-Rw-qlL"/>
